# malaysian-name-ethnicity-classifier

./: .env.example  .gitignore  CLAUDE.md  README.md  asian-naming-patterns-research.md  classifiers.py  column_detector.py  config.py  example-source-file.csv  main.py  package-lock.json  package.json  prd.md  pyproject.toml  tasks.md
.claude/: settings.local.json
src/: classifier.test.ts  classifier.ts  csv-processor.test.ts  csv-processor.ts  llm-client.test.ts  llm-client.ts  llm-parser.ts  main.ts  rule-classifier.test.ts  rule-classifier.ts  schemas.test.ts  schemas.ts
