[project]
name = "malaysian-name-ethnicity-classifier"
version = "0.1.0"
description = "Malaysian name ethnicity classifier using rule-based and AI classification"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "instructor>=1.0.0",
    "openai>=1.0.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.csv",
    ".env*",
    ".git*",
    "__pycache__",
    "*.pyc",
]

[tool.uv]
dev-dependencies = []